@startuml diagrama_furby

class Temporizador {
    # tiempoLimite: float
    # reloj: sf::Clock
    # activo: bool
    + Temporizador(limite: float)
    + Actualizar(): bool
    + Reiniciar()
    + Pausar()
    + EstaActivo(): bool
}

class THambre {
    + THambre(limite: float)
}

class TVida {
    + TVida(limite: float)
}

class TEnfermedad {
    + TEnfermedad(limite: float)
}

enum EstadoFurby {
    HUEVO
    NORMAL
    HAMBRE
    SUCIO
    ENFERMO
    CANSADO
    HAMBRE_CANSADO
    HAMBRE_SUCIO
    MUERTO
}

class Furby {
    - nombre: string
    - hambre: int
    - higiene: int
    - salud: int
    - sueno: int
    - golpesHuevo: int
    - durmiendo: bool
    - edad: int
    - estadoActual: EstadoFurby
    - textura: sf::Texture
    - sprite: sf::Sprite
    - actualFrame: int
    - totalFrames: int
    - anchoFrame: int
    - altoFrame: int
    - relojAnimacion: sf::Clock
    - tHambre: THambre
    - tVida: TVida
    - tEnfermedad: TEnfermedad
    + Furby(n: string)
    + Nacer()
    + GolpearHuevo()
    + Comer()
    + Banar()
    + Curar()
    + HacerPopo()
    + Dormir()
    + Despertar()
    + Morir()
    + Revivir()
    + ActualizarTiempo()
    + ActualizarAnimacion()
    + Dibujar(window: sf::RenderWindow&)
    + ObtenerEstado(): EstadoFurby
    + ObtenerNombre(): string
    + ObtenerHambre(): int
    + ObtenerHigiene(): int
    + ObtenerSalud(): int
    + ObtenerSueno(): int
    + ObtenerGolpesHuevo(): int
}

class JuegoAgente {
    - personaje: Furby
    - ventana: sf::RenderWindow
    - fuente: sf::Font
    - textoEstado: sf::Text
    + IniciarJuego()
    + ProcesarEventos()
    + Actualizar()
    + Dibujar()
    + MostrarPantallaInicio()
}

class BotonInterfaz {
    - forma: sf::RectangleShape
    - texto: sf::Text
    + BotonInterfaz(etiqueta: string, x: float, y: float)
    + FueClickeado(posicionRaton: sf::Vector2i): bool
    + Dibujar(window: sf::RenderWindow&)
}

THambre --|> Temporizador : es un
TVida --|> Temporizador : es un
TEnfermedad --|> Temporizador : es un

JuegoAgente *-- Furby : tiene un
Furby *-- THambre : tiene un
Furby *-- TVida : tiene un
Furby *-- TEnfermedad : tiene un
JuegoAgente "1" *-- "*"BotonInterfaz : tiene muchos

Furby ..> EstadoFurby : usa un
main o-- JuegoAgente : usa un

@enduml